src/unit_tests/Semantics/success/dispatchnoargs.cl
class Test {
  foo:Test;
  bar():Object{foo.bar()};
};

class Main {
	main() : Int {
		1
	};
};