src/unit_tests/Semantics/fail/dispatchonearg.cl
class Test {
  foo:Test;
  bar(x:Baz):Object{foo.bar(x)};
};

class Main {
	main() : Int {
		1
	};
};